tests/paczka2/big_fuzzy/25138688.err
Error in line 2: FqJQMBHk S454 95,0
Error in line 7: FqJQMBHk S897 52,7
Error in line 16: R8N1HchYD A757 65,92
Error in line 18: A757 S897 247,4
Error in line 32: lcMVf A585 49,8
Error in line 21: daVYuv S454 14,2
Error in line 53: R8N1HchYD A585 70,5
Error in line 57: R8N1HchYD S897 77,5
Error in line 33: 29a3 S897 28,1
Error in line 63: R8N1HchYD A585 0,4
Error in line 71: FqJQMBHk S454 20,5
Error in line 73: FqJQMBHk S897 94,5
Error in line 48: 6ha7WH A757 138,5
Error in line 86: 29a3 S454 37,75
Error in line 55: daVYuv S897 65,5
Error in line 77: FqJQMBHk A585 24,4
Error in line 91: daVYuv A757 61,2
Error in line 93: FqJQMBHk S897 28,8
Error in line 95: FqJQMBHk A585 96,2
Error in line 94: daVYuv A585 3,6
Error in line 101: lcMVf 585 1,6
Error in line 100: daVYuv A757 74,1
Error in line 103: daVYuv S897 2,1
Error in line 61: 29a3 S454 12,8
Error in line 105: daVYuv A757 12,1
Error in line 109: A757 A585 27,8
Error in line 115: 6ha7WH A585 36,5
Error in line 117: 29a3 S454 66,1
Error in line 125: 6ha7WH A585 69,3
Error in line 140: daVYuv 757 96,7
Error in line 132: 6ha7WH S454 36,3
Error in line 142: A757 S454 7,7
Error in line 112: FqJQMBHk A585 28,7
Error in line 146: A757 S897 2,2
Error in line 157: A757 A757 35,9
Error in line 160: 29a3 S454 32,9
Error in line 156: FqJQMBHk S454 43,0
Error in line 174: R8N1HchYD S454 46,4
Error in line 149: daVYuv A757 254,3
Error in line 184: daVYuv A585 96,6
Error in line 170: A757 S454 25,4
Error in line 185: daVYuv S897 30,3
Error in line 188: A757 A757 47,0
Error in line 196: A757 S454 92,9
Error in line 207: FqJQMBHk S454 1,7
Error in line 220: R8N1HchYD A585 24,0
Error in line 202: 6ha7WH S454 328,7
Error in line 209: daVYuv A585 40,9
Error in line 236: 6ha7WH S897 408,4
Error in line 246: 6ha7WH A757 98,9
Error in line 248: 6ha7WH S897 49,2
